--- a/style.css
+++ b/style.css
@@ -759,3 +759,49 @@ footer {
     margin-bottom: 1rem;
   }
 }
+
+@media screen and (max-width: 720px){
+  :root{
+    --logowidth: 6rem;
+    --navtagwidth: 18rem;
+    --navheight: 6.5rem;
+
+  }
+  
+  
+  .navbar {
+    flex-flow: row wrap;
+    align-items: start;
+  }
+
+  .redrectNav {
+    width: 100%;
+    height: 3rem;
+  }
+
+  .logo{
+    margin-left: 1rem;
+  }
+
+  nav{
+    height: 3rem;
+    align-items: end;
+    margin-left: 0.5rem;
+  }
+
+  .redCont{
+    height: 3rem;
+    background-color: transparent;
+    width: auto;
+    margin-right: 0.5rem;
+  }
+
+  .navanchorwhite{
+    color: var(--primary);
+    margin: 0;
+  }
+
+  .navanchor{
+    margin: 0;
+  }
+}
